--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -112,15 +112,25 @@
             {% for p in post_list %}
             <!-- Blog Post -->
             <div class="card mb-4">
-                <img class="card-img-top" src="{{ p.head_image.url }}" alt="Card image cap">
+                {% if p.head_image %}
+                <img class="card-img-top" src="{{ p.head_image.url }}" alt="{{ p }} head image">
+                <!--1번 게시글은 대표사진 없어서 오류뜸-->
 <!--                    <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>-->
+                {% endif %}
                 <div class="card-body">
                         <span class="badge badge-secondary float-right">programming</span>
 
-                    <h2 class="card-title">{{ p.title }}</h2>
+                    <!-- Title -->
+                    <h1 class="mt-4">{{ post.title }}</h1>
+                    {% if p.hook_text %}
+                        <h5 class="text-muted">{{ p.hook_text }}</h5>
+                    {% endif %}
+
+                    <!-- Author -->
                     <p class="card-text">{{ p.content }}</p>
                     <a href="{{ p.get_absolute_url }}" class="btn btn-primary">Read More &rarr;</a>
                 </div>
+
                 <div class="card-footer text-muted">
                     Posted on {{ p.created_at }} by
                     <a href="#">작성자명 쓸 위치 (개발 예정) </a>
