--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -43,13 +43,13 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="./index.html">Home</a>
+                        <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./blog_list.html">Blog</a>
+                        <a class="nav-link" href="/post_list/">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./about_me.html">About Me</a>
+                        <a class="nav-link" href="/about_me/">About Me</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarBoardDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
