--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,223 +1,65 @@
-<!--<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Blog</title>
-</head>
-<body>
-    <h1>Blog</h1>
-{% for p in post_list %}
-    <hr/>
-    <h2><a href="{{ p.get_absolute_url }}">{{ p.title }}</a></h2>
-    <h3>{{ p.created_at }}</h3>
-    <p>{{ p.content }}</p>
-{% endfor %}
+{% extends 'blog/base.html' %}
 
-</body>
-</html>-->
-<!DOCTYPE html>
-{% load static %}
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
-    <link href="./practice.css" rel="stylesheet" type="text/css">
-    <link href="./bootstrap4/css/bootstrap.min.css"rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="{% static 'blog/bootstrap/bootstrap.min.css' %}"
-          media="screen">
-</head>
-
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-            <a class="navbar-brand" href="/">Do It Django</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/post_list/">Blog</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/about_me/">About Me</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarBoardDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Board
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarBoardDropdown">
-                            <a class="dropdown-item" href="/board/free-board/">자유게시판</a>
-                            <a class="dropdown-item" href="/board/qna/">Q&A</a>
-                            <a class="dropdown-item" href="/board/gallery/">웹사이트 자랑하기</a>
-                        </div>
-                    </li>
-                </ul>
-                <ul class="navbar-nav ml-auto">
-
-                        <li class="nav-item">
-                            <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal">Log In</a>
-                        </li>
-
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-<!-- Modal -->
-<div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="logInModalLabel"
-     aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="loginModalLabel"> <i class="fas fa-sign-in-alt"></i>&nbsp Log In</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <div class="row">
-                    <div class="col-md-6">
-                        <a role="button" class="btn btn-outline-dark btn-block btn-sm" href="/accounts/google/login/"><i class="fab fa-google"></i>&nbsp&nbsp Log in with Google</a>
-                        <a role="button" class="btn btn-outline-dark btn-block btn-sm" href="/accounts/login/?next=/blog/"><i class="far fa-envelope"></i>&nbsp&nbsp Log in with username</a>
-                    </div>
-                    <div class="col-md-6">
-                        <a role="button" class="btn btn-outline-dark btn-block btn-sm" href="/accounts/signup/"><i class="far fa-envelope"></i>&nbsp&nbsp Sign Up with E-mail</a>
-                    </div>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-<div class="container my-3">
-    <div class="row">
-        <div class="col-md-8 col-lg-9" id="main-area">
-
-    <h1>Blog</h1>
-
-            {% for p in post_list %}
-            <!-- Blog Post -->
-            <div class="card mb-4">
-                {% if p.head_image %}
-                <img class="card-img-top" src="{{ p.head_image.url }}" alt="{{ p }} head image">
-                <!--1번 게시글은 대표사진 없어서 오류뜸-->
-<!--                    <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>-->
+    {% block main_area %}
+        <!-- Blog post-->
+        <h1>Blog
+            {% if category %}<span class="badge badge-secondary">{{category}}</span>
+            {% endif %}
+        </h1>
+        {% if post_list.exists %}
+        {% for p in post_list %}
+        <div class="card mb-4" id="post-{{p.pk}}">
+            {% if p.head_image %}
+            <img class="card-img-top" src="{{ p.head_image.url }}" alt="{{ p }} head_image" height="300"/>
+            {% else %}
+            <img class="card-img-top" src="https://picsum.photos/seed/{{ p.pk }}/800/300" alt="random image"/>
+            {% endif %}
+            <div class="card-body">
+                {% if p.category %}
+                <span class="badge badge-secondary float-right">{{p.category}}</span>
+                {% else %}
+                <span class="badge badge-secondary float-right">미분류</span>
                 {% endif %}
-                <div class="card-body">
-                        <span class="badge badge-secondary float-right">programming</span>
+                <!--
+                <div class="small text-muted">{{ p.created_at }} by {{p.author | lower }}</div> -->
+                <!-- upper 사용하면 대문자 -->
+                <h2 class="card-title h4">{{ p.title }}</h2>
 
-                    <!-- Title -->
-                    <h1 class="mt-4">{{ post.title }}</h1>
-                    {% if p.hook_text %}
-                        <h5 class="text-muted">{{ p.hook_text }}</h5>
-                    {% endif %}
+                {% if p.hook_test %}
+                <h5 class="text-muted">{{ p.hook_test }}</h5>
+                {% endif %}
 
-                    <!-- Author -->
-                    <p class="card-text">{{ p.content }}</p>
-                    <a href="{{ p.get_absolute_url }}" class="btn btn-primary">Read More &rarr;</a>
-                </div>
-
-                <div class="card-footer text-muted">
-                    Posted on {{ p.created_at }} by
-                    <a href="#">작성자명 쓸 위치 (개발 예정) </a>
-                </div>
+                <p class="card-text">{{ p.content | truncatechars:45}}</p> <!-- words 단어당 -->
+                <!--tag area-->
+                {% if p.tags.exists %}
+                <i class="fas fa-tags"></i>
+                {% for tag in p.tags.all %}
+                <span class="badge badge-pill badge-light">{{tag}}</span>
+                {% endfor %}
+                <br/><br/>
+                {% endif %}
+                <a class="btn btn-primary" href="{{ p.get_absolute_url }}">Read more →</a>
             </div>
-            {% endfor %}
-
-        <!-- Pagination -->
-        <ul class="pagination justify-content-center mb-4">
-
-                <li class="page-item">
-                    <a class="page-link" href="?page=2">&larr; Older</a>
-                </li>
-                <li class="page-item disabled">
-                    <a class="page-link" href="#">Newer &rarr;</a>
-                </li>
-        </ul>
-        </div>
-
-        <div class="col-md-4 col-lg-3">
-            <!-- Search Widget -->
-            <div class="card my-4">
-                <h5 class="card-header">Search</h5>
-                <div class="card-body">
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search for..." id="search-input">
-                        <span class="input-group-btn">
-                                <button class="btn btn-secondary" type="button" onclick="searchPost();">Go!</button>
-                            </span>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Categories Widget -->
-            <div class="card my-4" id="categories-card">
-                <h5 class="card-header">Categories</h5>
-                <div class="card-body">
-                    <div class="row">
-
-                        <ul>
-                                <li>
-                                    <a href="/blog/category/programming/">programming (5)</a>
-                                </li>
-                            <li>
-                                <a href="/blog/category/no_category/">미분류 (1)</a>
-                            </li>
-                        </ul>
-
-                    </div>
-                </div>
+            <div class="card-footer text-muted">
+                Posted on {{p.created_at}} by <a href="#">{{p.author | lower }}</a>
             </div>
         </div>
-    </div>
-</div>
-    <script>
-        function searchPost(){
-            let searchValue = document.getElementById('search-input').value.trim();
-            if (searchValue.length > 1){
-                location.href="/blog/search/" + searchValue + "/";
-            }
-            else{
-                alert('검색어('+ searchValue +')가 너무 짧습니다.');
-            }
-        };
-
-        document.getElementById('search-input').addEventListener('keyup', function(event){
-            if(event.key === 'Enter'){
-                searchPost();
-            }
-        });
-    </script>
-
-
-    <!-- Footer -->
-<footer class="py-5 bg-dark">
-    <div class="container">
-        <p class="m-0 text-center text-white">
-           2023.midtest.webframe
-        </p>
-    </div>
-    <!-- /.container -->
-</footer>
-
-
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
-
-</body>
-</html>
+        {% endfor %}
+        {% else %}
+        <h3>아직 글이 없습니다.</h3>
+        {% endif %}
+        <!-- Page 밑에 번호 1,2,3,..-->
+        <nav aria-label="Pagination">
+            <hr class="my-0"/>
+            <ul class="pagination justify-content-center my-4">
+                <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1" aria-disabled="true">Newer</a>
+                </li>
+                <li class="page-item active" aria-current="page"><a class="page-link" href="#!">1</a></li>
+                <li class="page-item"><a class="page-link" href="#!">2</a></li>
+                <li class="page-item"><a class="page-link" href="#!">3</a></li>
+                <li class="page-item disabled"><a class="page-link" href="#!">...</a></li>
+                <li class="page-item"><a class="page-link" href="#!">15</a></li>
+                <li class="page-item"><a class="page-link" href="#!">Older</a></li>
+            </ul>
+        </nav>
+    {% endblock %}
