--- a/blog/templates/blog/base_full_width.html
+++ b/blog/templates/blog/base_full_width.html
@@ -27,6 +27,7 @@
 <div class="container my-4"> <!-- 마진을 의미, 위 아래에 중간 정도의 크기 mt(위), mb(아래), ml(오른쪽), mr(오른쪽) -->
     <!-- mx(수평), my(수직) -->
     <div class="row">
+        <!--col사이즈는 12로 고정-->
         <div class="col-sm-12" id="main-area">
             {% block main_area %}
 
