--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,13 +1,11 @@
 {% extends 'blog/base.html' %}
 
-    {% block main_area %}
-        {% if user.is_authenticated %}
-            {% if user.is_superuser or user.is_staff %}
-                <a class="btn btn-info btn-sm float-right" href="/blog/create_post/" role="button">
-                    <i class="fas fa-pen"></i>&nbsp;&nbsp;New Post
-                </a>
-            {% endif %}
+{% block main_area %}
+    {% if user.is_authenticated%}
+        {% if user.is_superuser or user.is_staff %}
+            <a class="btn btn-info btn-sm float-right" href="/blog/create_post/" role="button"><i class="fas fa-pen"></i>&nbsp;&nbsp;New Post</a>
         {% endif %}
+    {% endif %}
 
         <h1>Blog
             {% if category %}<span class="badge badge-secondary">{{ category }}</span>
@@ -36,7 +34,7 @@
                 <h5 class="text-muted">{{ p.hook_test }}</h5>
                 {% endif %}
 
-                <p class="card-text">{{ p.content | truncatechars:45}}</p> <!-- words 단어당 -->
+                <p class="card-text">{{ p.content | linebreaksbr | truncatechars:15 }}</p> <!-- words 단어당 -->
 
                 <!--tag area-->
                 {% if p.tags.exists %}
