--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -11,6 +11,8 @@
 
     <!-- Blog post-->
     <h1>Blog
+        {% if search_info %}
+        <small class="text-muted">{{search_info}}</small> {% endif %}
         {% if category %}<span class="badge badge-secondary">{{ category }}</span>
         {% endif %}
     </h1>
